--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "node --loader esbuild-register/loader -r esbuild-register ./db/seed.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
